--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Jun Tian <tianjun.cpp@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
