--- a/Project.toml
+++ b/Project.toml
@@ -20,8 +20,8 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Adapt = "1"
-CUDAapi = "3, 4.0"
-CuArrays = "1.7"
+CUDAapi = "3, 4"
+CuArrays = "1.7, 2"
 Distributions = "0.22, 0.23"
 FillArrays = "0.8"
 Flux = "0.10"
