--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
