--- a/Project.toml
+++ b/Project.toml
@@ -25,15 +25,19 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Adapt = "1"
+BSON = "0.2"
 CUDAapi = "3, 4"
 CuArrays = "1.7, 2"
 Distributions = "0.22, 0.23"
+FileIO = "1.3"
 FillArrays = "0.8"
 Flux = "0.10"
 GPUArrays = "2, 3"
+JLD = "0.10"
 MacroTools = "0.5"
 ProgressMeter = "1.2"
 ReinforcementLearningBase = "0.7"
+Setfield = "0.6"
 StatsBase = "0.32, 0.33"
 Zygote = "0.4"
 julia = "1.3"
