--- a/Project.toml
+++ b/Project.toml
@@ -5,14 +5,11 @@ version = "0.3.3"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
-Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
-CUDAapi = "3895d2a7-ec45-59b8-82bb-cfc6a382f9b3"
-CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
-GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -26,14 +23,10 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-Adapt = "1, 2"
 BSON = "0.2"
-CUDAapi = "3, 4"
-CuArrays = "1.7, 2"
 Distributions = "0.22, 0.23"
 FillArrays = "0.8"
-Flux = "0.10"
-GPUArrays = "2, 3, 4.0"
+Flux = "0.11"
 ImageTransformations = "0.8"
 JLD = "0.10"
 MacroTools = "0.5"
@@ -41,7 +34,6 @@ ProgressMeter = "1.2"
 ReinforcementLearningBase = "0.7"
 Setfield = "0.6"
 StatsBase = "0.32, 0.33"
-Zygote = "0.4"
 julia = "1.3"
 
 [extras]
