--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,6 @@ version = "0.5.1"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
-BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CircularArrayBuffers = "9de3a189-e0c0-4e15-ba3b-b14b9fb0aec1"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -31,7 +30,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 AbstractTrees = "0.3"
 Adapt = "2"
-BSON = "0.2"
+CircularArrayBuffers = "0.1"
 CUDA = "1, 2.1"
 Distributions = "0.24"
 ElasticArrays = "1.2"
